tests/custom-4.5.1/noncompliant/pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: noncompliant-pod
  namespace: default
spec:
  containers:
    - name: nginx
      image: nginx:latest
