tests/custom-4.5.1/noncompliant/kyverno-test.yaml
apiVersion: cli.kyverno.io/v1alpha1
kind: Test
metadata:
  name: custom-4.5.1-noncompliant
policies:
  - ../../../kyverno-policies/custom-4.5.1.yaml
resources:
  - pod.yaml
results:
  - policy: cis-4-5-1-use-namespaces-for-boundaries
    rule: disallow-default-namespace
    resources:
      - noncompliant-pod
    kind: Pod
    result: fail
